- fixed tooltip z-index;

--- a/assets/css/admin/global.sass
+++ b/assets/css/admin/global.sass
@@ -34,13 +34,13 @@ ul#adminmenu
         opacity: 0.9
 
 /* UM Tooltip ( future helptip ) */
-.ui-tooltip
+.um .ui-tooltip
   &.#{$helptip}
     padding: 8px
     color: $grey-text !important
     background: $overlay !important
     position: absolute
-    z-index: 1000000
+    z-index: 10002
     max-width: 300px
     font-size: 12px
     border-radius: 5px
